# waybound

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: microsoft-auth.md
docs/decisions/: 001-modrinth-client-via-tauri-commands.md  002-curseforge-api-key-storage.md  003-sqlite-library-cache.md  004-instance-mod-install.md  005-modpack-import.md
src/: App.module.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  download.rs  lib.rs  main.rs
src-tauri/src/auth/: microsoft.rs  mod.rs
src-tauri/src/commands/: auth.rs  config.rs  content.rs  instances.rs  launch.rs  missing_mods.rs  mod.rs  project.rs  search.rs  settings.rs
src-tauri/src/config/: docker_env.rs  mod.rs  protected.rs
src-tauri/src/db/: instances.rs  mod.rs
src-tauri/src/dto/: instance.rs  mod.rs  project_detail.rs
src-tauri/src/identity/: matcher.rs  mod.rs
src-tauri/src/instances/: mod.rs  paths.rs
src-tauri/src/launch/: fabric.rs  files.rs  forge.rs  java.rs  java_runtime.rs  manifest.rs  mod.rs
src-tauri/src/modpack/: curseforge.rs  mod.rs  modrinth.rs
src-tauri/src/modpack/preview/: curseforge.rs  mod.rs  modrinth.rs
src-tauri/src/settings/: mc_options.rs  mod.rs
src-tauri/src/sources/: curseforge.rs  curseforge_key.rs  mod.rs  modrinth.rs
src/components/: ConfirmDialog.module.css  ConfirmDialog.tsx  ContextMenu.module.css  ContextMenu.tsx  SegmentGroup.module.css  SegmentGroup.tsx
src/hooks/: useEscapeKey.ts  (+1 more)
(+68 files in other folders)
